<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".administrativa.Agregar_Cliente">

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Usuario"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="69dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Contraseña"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="126dp" />


    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="188dp" />

    <Spinner
        android:id="@+id/maritalStatusSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/marital_status_prompt"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="250dp" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_hint"
        android:inputType="textPostalAddress"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="472dp" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="354dp" />

    <EditText
        android:id="@+id/birthDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birth_date_hint"
        android:inputType="date"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="410dp" />

    <EditText
        android:id="@+id/salaryEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salary_hint"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="295dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Guardar Cliente"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="629dp" />


</androidx.constraintlayout.widget.ConstraintLayout>